# HSDAC

./: .gitignore  README.md
HID-Bootloader/: .cproject  .project  .template  HID-Bootloader.launch  HID-Bootloader.wvproj
HID-Bootloader/.mrs/: HID-Bootloader.mrs-workspace  launch.json
HID-Bootloader/Ld/: Link.ld
HID-Bootloader/Startup/: startup_ch32v30x_D8C.S
HID-Bootloader/User/: main.c
HID-Bootloader/User/usb/: ch32v30x_usbhs_device.c  ch32v30x_usbhs_device.h  usb_conf.cpp  usb_desc.c  usb_desc.h
HSDAC/: .cproject  .project  .template  HSDAC.wvproj
HSDAC/.mrs/: HSDAC.mrs-workspace  launch.json  preferredEncoding.json
HSDAC/Debug/: debug.c
HSDAC/Peripheral/inc/: ch32v30x_usb.h
HSDAC/User/: LED.c  ch32v30x_conf.h  codec.c  codec.h  hid_queue.c  hid_queue.h  main.c  system_ch32v30x.c  tick.c  tick.h
HSDAC/User/usb/: ch32v30x_usbhs_device.c  ch32v30x_usbhs_device.h  usb_audio_v1_0.h  usb_audio_v2_0.h  usb_desc.c  usb_desc.h
dfu/: CMakeLists.txt  write.py
dfu/src/: MainComponent.cpp  MainComponent.h  uac_widget.cpp  uac_widget.hpp
hardware/: HSDAC.kicad_pcb  HSDAC.kicad_pro  HSDAC.kicad_sch  sym-lib-table
